Add tmux config

--- a/app/tmux/tmux.conf
+++ b/app/tmux/tmux.conf
@@ -217,6 +217,11 @@ if-shell "uname -s | awk '{exit !($1 == \"Darwin\")}'" \
 # Plugins                                                                   {{{1
 # ==============================================================================
 
+# > set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+# > set -g @plugin 'tmux-plugins/tmux-copycat'
+# > set -g @plugin 'tmux-plugins/tmux-sensible'
+# > set -g @plugin 'tmux-plugins/tmux-yank'
+
 # Dracula                                                                   {{{2
 # ------------------------------------------------------------------------------
 
@@ -243,5 +248,8 @@ set -g @dracula-show-weather false
 # Install/update plugins:
 # prefix + I
 
+set -g @plugin 'tmux-plugins/tpm'
+
+# Initialize TPM.
 # Keep this line at the very bottom of 'tmux.conf'.
-run -b '~/.tmux/plugins/tpm/tpm'
+run -b '${HOME}/.tmux/plugins/tpm/tpm'
