Harden against missing tmux dir

--- a/app/tmux/tmux.conf
+++ b/app/tmux/tmux.conf
@@ -251,5 +251,6 @@ set -g @dracula-show-weather false
 set -g @plugin 'tmux-plugins/tpm'
 
 # Initialize TPM.
-# Keep this line at the very bottom of 'tmux.conf'.
-run -b '${HOME}/.tmux/plugins/tpm/tpm'
+# Keep this at the very bottom of 'tmux.conf'.
+if-shell -b '[ -d "${HOME}/.tmux/plugins/tpm" ]' " \
+    run -b '${HOME}/.tmux/plugins/tpm/tpm'"
