Improve TPM config

--- a/app/tmux/tmux.conf
+++ b/app/tmux/tmux.conf
@@ -217,6 +217,7 @@ if-shell "uname -s | awk '{exit !($1 == \"Darwin\")}'" \
 # Plugins                                                                   {{{1
 # ==============================================================================
 
+# Potentially useful plugins to enable:
 # > set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 # > set -g @plugin 'tmux-plugins/tmux-copycat'
 # > set -g @plugin 'tmux-plugins/tmux-sensible'
