Simplify tmux dracula config

--- a/app/tmux/tmux.conf
+++ b/app/tmux/tmux.conf
@@ -5,6 +5,7 @@
 # Restart the server when changing settings:
 # > tmux kill-server
 #
+# Shorthand aliases:
 # * set = set-option
 # * setw = set-window-option
 #
@@ -13,56 +14,41 @@
 #
 # See also:
 # - http://man.openbsd.org/OpenBSD-current/man1/tmux.1
+# - https://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
 # - https://github.com/claytron/dotfiles/blob/master/.tmux.conf
 # - https://github.com/lotabout/dotfiles/blob/master/.tmux.conf
 # - https://github.com/dariomanesku/.tmux/blob/master/.tmux.conf
-# - https://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
+# - https://github.com/majutsushi/etc/blob/master/tmux/tmux.conf
 # """
 
 
 
-# Version-specific changes                                                  {{{1
+# Server options                                                            {{{1
 # ==============================================================================
 
-# See also:
-# - Changelog
-#   https://github.com/tmux/tmux/blob/master/CHANGES
-# - How to write version-specific config
-#   https://stackoverflow.com/questions/35016458
-# - Improved detection method using awk
-#   https://stackoverflow.com/a/41392083/3911732
-# - 2.9 changes
-#   https://github.com/tmux/tmux/issues/1689
-#   https://github.com/tmux/tmux/wiki/FAQ
+# Potentially useful:
+# > set-option -sg buffer-limit 100
+# > set-option -sg focus-events off
 
-# tmux 2.1+ can selectively color the activities pane.
-# Can use xterm-256 colors or ANSI.
-# - http://www.deanbodenham.com/learn/tmux-pane-colours.html
-# - https://stackoverflow.com/a/33562182
-# - https://upload.wikimedia.org/wikipedia/commons/1/15/Xterm_256color_chart.svg
+# Set the delay so that it doesn't interfere with programs like vim.
+set-option -sg escape-time 0
 
 
 
-# Global variables                                                          {{{1
-# ==============================================================================
-
-# Passthrough to `if-shell` doesn't seem to be working for me with v2.9.
-# > run-shell 'tmux setenv -g OSNAME $(uname -s)'
-# > run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | cut -d " " -f 2)'
-
-
-
-# General tmux settings                                                     {{{1
+# Session options                                                           {{{1
 # ==============================================================================
 
 # Force tmux to always use UTF-8.
-setw -gq utf8 on
+set-window-option -gq utf8 on
 
-# Set the delay so that it doesn't interfere with programs like vim.
-set -sg escape-time 0
+# Set clock style.
+set-option -g clock-mode-style 12
 
-# Set the scrollback.
-set -g history-limit 200000
+# Set the history scrollback limit.
+set-option -g history-limit 200000
+
+# Set the status bar refresh interval.
+# > set-option -g status-interval 5
 
 
 
@@ -84,11 +70,28 @@ set -g history-limit 200000
 # - https://github.com/tmux/tmux/issues/1246
 
 # Set the default terminal inside tmux, which natively supports 256 colors.
-set -g default-terminal "screen-256color"
+set-option -g default-terminal "screen-256color"
 
 # Enable 24-bit true color support.
 # Note that this value should match the client terminal outside of tmux.
-set -ga terminal-overrides ",xterm-256color:Tc"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+# Dracula color palette                                                     {{{2
+# ------------------------------------------------------------------------------
+
+# https://github.com/dracula/tmux/blob/master/scripts/dracula.sh
+
+cyan='#8be9fd'
+dark_gray='#282a36'
+dark_purple='#6272a4'
+gray='#44475a'
+green='#50fa7b'
+light_purple='#bd93f9'
+orange='#ffb86c'
+pink='#ff79c6'
+red='#ff5555'
+white='#f8f8f2'
+yellow='#f1fa8c'
 
 
 
@@ -96,7 +99,7 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 # ==============================================================================
 
 # Use vi key bindings.
-setw -g mode-keys vi
+set-window-option -g mode-keys vi
 
 # Remap prefix from 'C-b' to 'C-a'.
 # Matches the conventions used in screen.
@@ -112,30 +115,15 @@ bind - split-window -v
 unbind '"'
 unbind %
 
-# Make window and pane indexes start with 1.
-# Zero-indexing is confusing.
-set -g base-index 1
-setw -g pane-base-index 1
+# Make window and pane indexes start with 1. Zero-indexing is confusing.
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
 
 # Change bind keys.
-# < 2.4: bind-key syntax changed in 2.4.
-if-shell "tmux -V | awk '{exit !($2 >= \"2.4\")}'" \
-   "bind-key -T copy-mode-vi v \
-        send -X begin-selection; \
-    bind-key -T copy-mode-vi V \
-        send -X select-line; \
-    bind-key -T copy-mode-vi C-v \
-        send -X rectangle-toggle; \
-    bind-key -T copy-mode-vi y \
-        send -X copy-pipe-and-cancel 'xclip -selection clipboard -in'" \
-   "bind-key -t vi-copy v \
-        begin-selection; \
-    bind-key -t vi-copy V \
-        select-line; \
-    bind-key -t vi-copy C-v \
-        rectangle-toggle; \
-    bind-key -t vi-copy y \
-        copy-pipe 'xclip -selection clipboard -in'"
+bind-key -T copy-mode-vi C-v send -X rectangle-toggle
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -selection clipboard -in'
 
 
 
@@ -147,42 +135,40 @@ if-shell "tmux -V | awk '{exit !($2 >= \"2.4\")}'" \
 # to use regularly.
 
 # Don't hold the size of the smallest client bounds.
-setw -g aggressive-resize on
+set-window-option -g aggressive-resize on
 
 # Notify if other windows have activity.
-set -g visual-activity on
-setw -g monitor-activity on
+set-option -g visual-activity on
+set-window-option -g monitor-activity on
 
-# Set window and status bar aesthetics.
-set  -g status-style                "fg=white,bg=black"
-set  -g pane-border-style           "fg=white,bg=black"
-set  -g pane-active-border-style    "fg=magenta,bg=black"
-setw -g window-status-style         "fg=white,bg=black,dim"
-setw -g window-status-current-style "fg=white,bg=black,bright"
+# Status bar.
+# > set-option -g status-left-length 100
+# > set-option -g status-right-length 100
+set-option -g status-style "bg=${gray},fg=${white}"
+set-option -g status-left "#[bg=${green},fg=${dark_gray}]#{?client_prefix,#[bg=${yellow}],} #S "
+set-option -g status-right "#[fg=${white},bg=${dark_purple}] #h %I:%M %p "
+
+# Message styling.
+set-option -g message-style "bg=${gray},fg=${white}"
+
+# Pane border styling.
+set-option -g pane-active-border-style "fg=${dark_purple}"
+set-option -g pane-border-style "fg=${gray}"
+
+# Window tabs.
+set-window-option -g window-status-current-format "#[fg=${white},bg=${dark_purple}] #I #W "
+set-window-option -g window-status-format "#[fg=${white}]#[bg=${gray}] #I #W "
 
 
 
 # Mouse mode                                                                {{{1
 # ==============================================================================
 
-# Renamed from `mouse-mode` to simply `mouse` in tmux v2.1.
-# Note that this can conflict with vim mouse mode.
-
 # PuTTY and PowerShell on Windows:
 # Hold SHIFT, left-click select text, and right-click to paste.
 
-# >= 2.1: "mouse" replaced the previous 4 mouse options.
-if-shell "tmux -V | awk '{exit !($2 >= \"2.1\")}'" \
-    "set -g mouse on" \
-    "set -g mouse-select-pane on; \
-     set -g mode-mouse on; \
-     set -g mouse-resize-pane on; \
-     set -g mouse-select-window on"
-# 2.2+: UTF-8 is autodetected, but errors if explicitly set.
-if-shell "tmux -V | awk '{exit !($2 < \"2.2\")}'" \
-    "set -g utf8 on; \
-     set -g status-utf8 on; \
-     set -g mouse-utf8 on"
+# Enable mouse mode.
+set-option -g mouse on
 
 
 
@@ -218,27 +204,11 @@ if-shell "uname -s | awk '{exit !($1 == \"Darwin\")}'" \
 # ==============================================================================
 
 # Potentially useful plugins to enable:
-# > set -g @plugin 'nhdaly/tmux-better-mouse-mode'
-# > set -g @plugin 'tmux-plugins/tmux-copycat'
-# > set -g @plugin 'tmux-plugins/tmux-sensible'
-# > set -g @plugin 'tmux-plugins/tmux-yank'
-
-# Dracula                                                                   {{{2
-# ------------------------------------------------------------------------------
-
-set -g @plugin 'dracula/tmux'
-
-# Disable battery functionality.
-set -g @dracula-show-battery false
-
-# Disable network functionality.
-set -g @dracula-show-network false
-
-# Disable weather functionality.
-set -g @dracula-show-weather false
-
-# Switch from default Fahrenheit to Celsius.
-# > set -g @dracula-show-fahrenheit false
+# > set-option -g @plugin 'dracula/tmux'
+# > set-option -g @plugin 'nhdaly/tmux-better-mouse-mode'
+# > set-option -g @plugin 'tmux-plugins/tmux-copycat'
+# > set-option -g @plugin 'tmux-plugins/tmux-sensible'
+# > set-option -g @plugin 'tmux-plugins/tmux-yank'
 
 # TPM                                                                       {{{2
 # ------------------------------------------------------------------------------
@@ -249,7 +219,7 @@ set -g @dracula-show-weather false
 # Install/update plugins:
 # prefix + I
 
-set -g @plugin 'tmux-plugins/tpm'
+set-option -g @plugin 'tmux-plugins/tpm'
 
 # Initialize TPM.
 # Keep this at the very bottom of 'tmux.conf'.
