--- a/app/tmux/tmux.conf
+++ b/app/tmux/tmux.conf
@@ -41,7 +41,7 @@ set-option -sg escape-time 0
 # Force tmux to always use UTF-8.
 set-window-option -gq utf8 on
 
-# Set clock style.
+# Set clock style. Use AM/PM instead of 24 hours.
 set-option -g clock-mode-style 12
 
 # Set the history scrollback limit.
@@ -79,19 +79,22 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 # Dracula color palette                                                     {{{2
 # ------------------------------------------------------------------------------
 
+# Modified variant of:
 # https://github.com/dracula/tmux/blob/master/scripts/dracula.sh
 
-cyan='#8be9fd'
-dark_gray='#282a36'
-dark_purple='#6272a4'
-gray='#44475a'
-green='#50fa7b'
-light_purple='#bd93f9'
-orange='#ffb86c'
-pink='#ff79c6'
-red='#ff5555'
+black='#22212c'
 white='#f8f8f2'
-yellow='#f1fa8c'
+
+cyan='#80ffea'
+green='#8aff80'
+magenta='#ff80bf'
+orange='#ffb86c'
+red='#ff9580'
+yellow='#ffff80'
+
+bright_purple='#9580FF'
+dark_purple='#454058'
+muted_purple='#7970A9'
 
 
 
@@ -142,22 +145,22 @@ set-option -g visual-activity on
 set-window-option -g monitor-activity on
 
 # Status bar.
-# > set-option -g status-left-length 100
-# > set-option -g status-right-length 100
-set-option -g status-style "bg=${gray},fg=${white}"
-set-option -g status-left "#[bg=${green},fg=${dark_gray}]#{?client_prefix,#[bg=${yellow}],} #S "
-set-option -g status-right "#[fg=${white},bg=${dark_purple}] #h %I:%M %p "
+set-option -g status-left-length 100
+set-option -g status-right-length 100
+set-option -g status-style 'bg=${dark_purple},fg=${white}'
+set-option -g status-left '#[bg=#{bright_purple},fg=${black}]#{?client_prefix,#[bg=${green}],} [#S] '
+set-option -g status-right '#[fg=${white}] #h %I:%M %p '
 
 # Message styling.
-set-option -g message-style "bg=${gray},fg=${white}"
+set-option -g message-style 'bg=${dark_purple},fg=${white}'
 
 # Pane border styling.
-set-option -g pane-active-border-style "fg=${dark_purple}"
-set-option -g pane-border-style "fg=${gray}"
+set-option -g pane-active-border-style 'fg=${bright_purple}'
+set-option -g pane-border-style 'fg=${dark_purple}'
 
 # Window tabs.
-set-window-option -g window-status-current-format "#[fg=${white},bg=${dark_purple}] #I #W "
-set-window-option -g window-status-format "#[fg=${white}]#[bg=${gray}] #I #W "
+set-window-option -g window-status-current-format '#[fg=${white},bg=${muted_purple}] #I #W '
+set-window-option -g window-status-format '#[fg=${white}] #I #W '
 
 
 
