--- a/app/tmux/tmux.conf
+++ b/app/tmux/tmux.conf
@@ -147,20 +147,20 @@ set-window-option -g monitor-activity on
 # Status bar.
 set-option -g status-left-length 100
 set-option -g status-right-length 100
-set-option -g status-style 'bg=${dark_purple},fg=${white}'
-set-option -g status-left '#[bg=#{bright_purple},fg=${black}]#{?client_prefix,#[bg=${green}],} [#S] '
-set-option -g status-right '#[fg=${white}] #h %I:%M %p '
+set-option -g status-style "bg=${dark_purple},fg=${white}"
+set-option -g status-left "#[bg=#{bright_purple},fg=${black}]#{?client_prefix,#[bg=${green}],} [#S] "
+set-option -g status-right "#[fg=${white}] #h %I:%M %p "
 
 # Message styling.
-set-option -g message-style 'bg=${dark_purple},fg=${white}'
+set-option -g message-style "bg=${dark_purple},fg=${white}"
 
 # Pane border styling.
-set-option -g pane-active-border-style 'fg=${bright_purple}'
-set-option -g pane-border-style 'fg=${dark_purple}'
+set-option -g pane-active-border-style "fg=${bright_purple}"
+set-option -g pane-border-style "fg=${dark_purple}"
 
 # Window tabs.
-set-window-option -g window-status-current-format '#[fg=${white},bg=${muted_purple}] #I #W '
-set-window-option -g window-status-format '#[fg=${white}] #I #W '
+set-window-option -g window-status-current-format "#[fg=${white},bg=${muted_purple}] #I #W "
+set-window-option -g window-status-format "#[fg=${white}] #I #W "
 
 
 
