Increase the status width

--- a/app/tmux/tmux.conf
+++ b/app/tmux/tmux.conf
@@ -145,10 +145,10 @@ set-option -g visual-activity on
 set-window-option -g monitor-activity on
 
 # Status bar.
-set-option -g status-left-length 100
-set-option -g status-right-length 100
+set-option -g status-left-length 200
+set-option -g status-right-length 200
 set-option -g status-style "bg=${dark_purple},fg=${white}"
-set-option -g status-left "#[bg=#{bright_purple},fg=${black}]#{?client_prefix,#[bg=${green}],} [#S] "
+set-option -g status-left "#[bg=#{bright_purple},fg=${black}]#{?client_prefix,#[bg=${green}],} #S "
 set-option -g status-right "#[fg=${white}] #h %I:%M %p "
 
 # Message styling.
