--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 # """
 # Git submodules.
-# Updated 2020-05-04.
+# Updated 2020-06-08.
 #
 # Potentially useful:
 # - jedi-vim
@@ -49,6 +49,11 @@
 [submodule "app/vim/vim.d/pack/dist/start/syntastic"]
 	path = app/vim/vim.d/pack/dist/start/syntastic
 	url = https://github.com/vim-syntastic/syntastic
+	branch = master
+	ignore = dirty
+[submodule "app/vim/vim.d/pack/dist/start/vim-grepper"]
+	path = app/vim/vim.d/pack/dist/start/vim-grepper
+	url = https://github.com/mhinz/vim-grepper.git
 	branch = master
 	ignore = dirty
 [submodule "shell/zsh/plugins/zsh-autosuggestions"]
