--- a/.gitmodules
+++ b/.gitmodules
@@ -61,6 +61,11 @@
 	url = https://github.com/mhinz/vim-signify.git
 	branch = master
 	ignore = dirty
+[submodule "app/vim/vim.d/pack/dist/start/vim-startify"]
+	path = app/vim/vim.d/pack/dist/start/vim-startify
+	url = https://github.com/mhinz/vim-startify.git
+	branch = master
+	ignore = dirty
 [submodule "shell/zsh/plugins/zsh-autosuggestions"]
 	path = shell/zsh/plugins/zsh-autosuggestions
 	url = https://github.com/zsh-users/zsh-autosuggestions
