--- a/os/darwin/app/homebrew/Brewfile
+++ b/os/darwin/app/homebrew/Brewfile
@@ -1,14 +1,9 @@
 tap "homebrew/bundle"
 tap "homebrew/cask"
-tap "homebrew/cask-drivers"
-tap "homebrew/cask-eid"
-tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "mongodb/brew"
-tap "osgeo/osgeo4mac"
 tap "vitorgalvao/tiny-scripts"
-cask "adoptopenjdk"
 cask "osxfuse"
 brew "gcc"
 brew "open-mpi"
@@ -17,19 +12,22 @@ brew "hdf5"
 brew "autoconf"
 brew "autojump"
 brew "automake"
-brew "python"
+brew "sqlite"
 brew "awscli"
+brew "azure-cli"
 brew "bash"
 brew "bash-completion"
 brew "bfg"
+brew "binutils"
 brew "ccache"
+brew "checkbashisms"
 brew "circleci"
 brew "cmake"
 brew "convmv"
 brew "coreutils"
 brew "curl"
 brew "libssh2"
-brew "exa"
+brew "dash"
 brew "exiftool"
 brew "flac"
 brew "lame"
@@ -37,73 +35,97 @@ brew "tesseract"
 brew "ffmpeg"
 brew "findutils"
 brew "fish"
+brew "libtool"
+brew "fzf"
+brew "gawk"
+brew "libxml2"
+brew "proj"
+brew "libgeotiff"
+brew "libspatialite"
+brew "netcdf"
+brew "gdal"
 brew "git"
 brew "git-lfs"
+brew "gnu-sed"
+brew "gnu-tar"
+brew "gnu-time"
+brew "gnu-units"
+brew "gnu-which"
 brew "go"
+brew "gpatch"
+brew "grep"
+brew "groff"
 brew "gsl"
 brew "htop"
+brew "httpd"
 brew "hub"
 brew "igraph"
 brew "libomp"
 brew "imagemagick"
+brew "jq"
 brew "ksh"
 brew "lapack"
 brew "leiningen"
 brew "lesspipe"
 brew "libav"
-brew "libxml2"
 brew "libgit2"
 brew "libiconv"
 brew "libressl"
 brew "librsvg"
 brew "libxslt"
-brew "llvm@7"
+brew "llvm"
+brew "lua"
+brew "luarocks"
+brew "make"
+brew "man-db"
 brew "mariadb-connector-c"
 brew "mas"
-brew "md5sha1sum", link: false
 brew "neofetch"
 brew "neovim"
+brew "nmap"
 brew "node"
-brew "numpy"
+brew "openssh"
 brew "pandoc"
 brew "pandoc-citeproc"
 brew "pandoc-crossref"
 brew "parallel"
-brew "pipx"
+brew "tree"
+brew "pass"
+brew "php"
 brew "pkg-config"
 brew "podofo"
 brew "protobuf"
-brew "pyenv"
-brew "ruby-build"
-brew "rbenv"
+brew "python", link: false
 brew "rename"
 brew "rsync"
 brew "ruby"
-brew "rust"
-brew "rustup-init"
+brew "ruby-build"
 brew "screen"
 brew "shellcheck"
 brew "shellharden"
+brew "shunit2"
 brew "sox"
 brew "sshfs"
+brew "subversion"
+brew "taglib"
 brew "tcl-tk"
 brew "tcsh"
+brew "texinfo"
 brew "the_silver_searcher"
 brew "tmux"
 brew "trash"
-brew "tree"
 brew "udunits"
 brew "v8"
 brew "vim"
 brew "wget"
-brew "winetricks"
 brew "youtube-dl"
 brew "zlib"
 brew "zsh"
 brew "mongodb/brew/mongodb-community"
-brew "osgeo/osgeo4mac/osgeo-gdal"
 brew "vitorgalvao/tiny-scripts/cask-repair"
 cask "1password"
+cask "adobe-acrobat-reader"
+cask "adoptopenjdk"
 cask "alacritty"
 cask "alfred"
 cask "aspera-connect"
@@ -115,13 +137,14 @@ cask "calibre"
 cask "carbon-copy-cloner"
 cask "coconutbattery"
 cask "coda"
+cask "darktable"
 cask "deluge"
 cask "docker"
 cask "emacs"
-cask "fiji"
 cask "firefox"
 cask "github"
 cask "google-chrome"
+cask "google-chrome-canary"
 cask "google-cloud-sdk"
 cask "google-drive-file-stream"
 cask "gpg-suite"
@@ -136,38 +159,42 @@ cask "kitty"
 cask "libreoffice"
 cask "little-snitch"
 cask "makemkv"
-cask "mongodb"
 cask "museeks"
 cask "netnewswire"
 cask "omnidisksweeper"
-cask "onyx"
+cask "pacifist"
+cask "photosweeper-x"
+cask "powershell"
+cask "pycharm-ce"
 cask "r"
 cask "rstudio"
 cask "safari-technology-preview"
+cask "scrivener"
 cask "skype"
-cask "slack"
 cask "spillo"
 cask "sublime-text"
 cask "superduper"
+cask "swinsian"
 cask "textmate"
-cask "torbrowser"
+cask "tiny-player"
+cask "tor-browser"
 cask "tower"
 cask "transmit"
 cask "tunnelblick"
+cask "virtualbox"
 cask "visual-studio-code"
 cask "vlc"
-cask "wine-stable"
 cask "xld"
 cask "xquartz"
-mas "Bear", id: 1091189122
+cask "zoom"
+cask "zoomus"
 mas "Calca", id: 635758264
-mas "Disk Speed Test", id: 425264550
 mas "EasyFind", id: 411673888
 mas "Gapplin", id: 768053424
-mas "Howler Timer", id: 428846772
+mas "GarageBand", id: 682658836
 mas "iA Writer", id: 775737590
-mas "iBatch for iTunes", id: 889032538
 mas "iMovie", id: 408981434
+mas "Instapaper", id: 1481302432
 mas "Keynote", id: 409183694
 mas "Name Mangler", id: 603637384
 mas "Numbers", id: 409203825
@@ -175,6 +202,6 @@ mas "Pages", id: 409201541
 mas "Pastebot", id: 1179623856
 mas "Reeder", id: 880001334
 mas "Soulver", id: 413965349
-mas "Spark", id: 1176895641
+mas "Table Tool", id: 1122008420
 mas "The Unarchiver", id: 425424353
 mas "Tweetbot", id: 1384080005
