--- a/os/darwin/app/homebrew/Brewfile
+++ b/os/darwin/app/homebrew/Brewfile
@@ -12,7 +12,6 @@ brew "hdf5"
 brew "autoconf"
 brew "autojump"
 brew "automake"
-brew "sqlite"
 brew "awscli"
 brew "azure-cli"
 brew "bash"
@@ -31,7 +30,6 @@ brew "dash"
 brew "exiftool"
 brew "flac"
 brew "lame"
-brew "tesseract"
 brew "ffmpeg"
 brew "findutils"
 brew "fish"
@@ -40,9 +38,6 @@ brew "fzf"
 brew "gawk"
 brew "libxml2"
 brew "proj"
-brew "libgeotiff"
-brew "libspatialite"
-brew "netcdf"
 brew "gdal"
 brew "git"
 brew "git-lfs"
@@ -85,21 +80,20 @@ brew "neovim"
 brew "nmap"
 brew "node"
 brew "openssh"
+brew "zlib"
+brew "tcl-tk"
 brew "pandoc"
 brew "pandoc-citeproc"
 brew "pandoc-crossref"
 brew "parallel"
-brew "tree"
 brew "pass"
 brew "php"
 brew "pkg-config"
 brew "podofo"
 brew "protobuf"
-brew "python", link: false
 brew "rename"
 brew "rsync"
 brew "ruby"
-brew "ruby-build"
 brew "screen"
 brew "shellcheck"
 brew "shellharden"
@@ -108,7 +102,6 @@ brew "sox"
 brew "sshfs"
 brew "subversion"
 brew "taglib"
-brew "tcl-tk"
 brew "tcsh"
 brew "texinfo"
 brew "the_silver_searcher"
@@ -119,7 +112,6 @@ brew "v8"
 brew "vim"
 brew "wget"
 brew "youtube-dl"
-brew "zlib"
 brew "zsh"
 brew "mongodb/brew/mongodb-community"
 brew "vitorgalvao/tiny-scripts/cask-repair"
@@ -189,16 +181,15 @@ cask "xquartz"
 cask "zoom"
 cask "zoomus"
 mas "Calca", id: 635758264
+mas "Disk Speed Test", id: 425264550
 mas "EasyFind", id: 411673888
 mas "Gapplin", id: 768053424
 mas "GarageBand", id: 682658836
 mas "iA Writer", id: 775737590
 mas "iMovie", id: 408981434
 mas "Instapaper", id: 1481302432
-mas "Keynote", id: 409183694
+mas "Internet Access Policy Viewer", id: 1482630322
 mas "Name Mangler", id: 603637384
-mas "Numbers", id: 409203825
-mas "Pages", id: 409201541
 mas "Pastebot", id: 1179623856
 mas "Reeder", id: 880001334
 mas "Soulver", id: 413965349
