--- a/os/darwin/app/homebrew/Brewfile
+++ b/os/darwin/app/homebrew/Brewfile
@@ -12,6 +12,7 @@ brew "hdf5"
 brew "autoconf"
 brew "autojump"
 brew "automake"
+brew "sqlite"
 brew "awscli"
 brew "azure-cli"
 brew "bash"
@@ -30,6 +31,7 @@ brew "dash"
 brew "exiftool"
 brew "flac"
 brew "lame"
+brew "tesseract"
 brew "ffmpeg"
 brew "findutils"
 brew "fish"
@@ -38,6 +40,9 @@ brew "fzf"
 brew "gawk"
 brew "libxml2"
 brew "proj"
+brew "libgeotiff"
+brew "libspatialite"
+brew "netcdf"
 brew "gdal"
 brew "git"
 brew "git-lfs"
@@ -80,17 +85,17 @@ brew "neovim"
 brew "nmap"
 brew "node"
 brew "openssh"
-brew "zlib"
-brew "tcl-tk"
 brew "pandoc"
 brew "pandoc-citeproc"
 brew "pandoc-crossref"
 brew "parallel"
+brew "tree"
 brew "pass"
 brew "php"
 brew "pkg-config"
 brew "podofo"
 brew "protobuf"
+brew "python", link: false
 brew "rename"
 brew "rsync"
 brew "ruby"
@@ -102,6 +107,7 @@ brew "sox"
 brew "sshfs"
 brew "subversion"
 brew "taglib"
+brew "tcl-tk"
 brew "tcsh"
 brew "texinfo"
 brew "the_silver_searcher"
@@ -112,6 +118,7 @@ brew "v8"
 brew "vim"
 brew "wget"
 brew "youtube-dl"
+brew "zlib"
 brew "zsh"
 brew "mongodb/brew/mongodb-community"
 brew "vitorgalvao/tiny-scripts/cask-repair"
@@ -189,7 +196,10 @@ mas "iA Writer", id: 775737590
 mas "iMovie", id: 408981434
 mas "Instapaper", id: 1481302432
 mas "Internet Access Policy Viewer", id: 1482630322
+mas "Keynote", id: 409183694
 mas "Name Mangler", id: 603637384
+mas "Numbers", id: 409203825
+mas "Pages", id: 409201541
 mas "Pastebot", id: 1179623856
 mas "Reeder", id: 880001334
 mas "Soulver", id: 413965349
