--- a/os/darwin/app/homebrew/Brewfile
+++ b/os/darwin/app/homebrew/Brewfile
@@ -5,6 +5,7 @@ tap "homebrew/core"
 tap "mongodb/brew"
 tap "vitorgalvao/tiny-scripts"
 cask "osxfuse"
+brew "ack"
 brew "gcc"
 brew "open-mpi"
 brew "openblas"
@@ -13,6 +14,7 @@ brew "autoconf"
 brew "autojump"
 brew "automake"
 brew "sqlite"
+brew "python@3.8"
 brew "awscli"
 brew "azure-cli"
 brew "bash"
@@ -41,8 +43,6 @@ brew "gawk"
 brew "libxml2"
 brew "proj"
 brew "libgeotiff"
-brew "libspatialite"
-brew "netcdf"
 brew "gdal"
 brew "git"
 brew "git-lfs"
@@ -89,13 +89,11 @@ brew "pandoc"
 brew "pandoc-citeproc"
 brew "pandoc-crossref"
 brew "parallel"
-brew "tree"
 brew "pass"
 brew "php"
 brew "pkg-config"
 brew "podofo"
 brew "protobuf"
-brew "python", link: false
 brew "rename"
 brew "rsync"
 brew "ruby"
