--- a/os/darwin/app/homebrew/Brewfile
+++ b/os/darwin/app/homebrew/Brewfile
@@ -1,128 +1,60 @@
+# """
+# Homebrew Bundle Brewfile.
+# Updated 2020-07-17.
+#
+# See also:
+# - https://github.com/Homebrew/homebrew-bundle
+# - https://www.caseyliss.com/2019/10/8/brew-bundle
+# - https://gist.github.com/cliss/74782128b9a35366ecac44a7c4b45752
+# """
+
+# Taps {{{1
+# ==============================================================================
+
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "mongodb/brew"
 tap "vitorgalvao/tiny-scripts"
+
+# Casks {{{1
+# ==============================================================================
+
+# 'foobar2000' cask was removed due to url protection.
+# 'macvim' cask overwrites 'vim' binary, so install manually instead.
+# 'skype-for-business' is potentially useful but starts up at login.
+
+# Requires authentication in 'Security & Privacy':
+# - box-drive
+# - virtualbox
+
+# Consider:
+# - fiji  # latest
+# - onyx
+# - oracle-jdk
+# - wine-stable
+
+# Casks that don't auto-update correctly:
+# - bibdesk
+# - firefox
+# - tunnelblick
+# - visual-studio-code
+# - iterm
+
+# Priority {{{2
+# ------------------------------------------------------------------------------
+
 cask "osxfuse"
-brew "ack"
-brew "gcc"
-brew "open-mpi"
-brew "openblas"
-brew "hdf5"
-brew "autoconf"
-brew "autojump"
-brew "automake"
-brew "sqlite"
-brew "python@3.8"
-brew "awscli"
-brew "azure-cli"
-brew "bash"
-brew "bash-completion"
-brew "bfg"
-brew "binutils"
-brew "ccache"
-brew "checkbashisms"
-brew "circleci"
-brew "cmake"
-brew "convmv"
-brew "coreutils"
-brew "curl"
-brew "libssh2"
-brew "dash"
-brew "exiftool"
-brew "flac"
-brew "lame"
-brew "tesseract"
-brew "ffmpeg"
-brew "findutils"
-brew "fish"
-brew "libtool"
-brew "fzf"
-brew "gawk"
-brew "libxml2"
-brew "proj"
-brew "libgeotiff"
-brew "gdal"
-brew "git"
-brew "git-lfs"
-brew "gnu-sed"
-brew "gnu-tar"
-brew "gnu-time"
-brew "gnu-units"
-brew "gnu-which"
-brew "go"
-brew "gpatch"
-brew "grep"
-brew "groff"
-brew "gsl"
-brew "htop"
-brew "httpd"
-brew "hub"
-brew "igraph"
-brew "libomp"
-brew "imagemagick"
-brew "jq"
-brew "ksh"
-brew "lapack"
-brew "leiningen"
-brew "lesspipe"
-brew "libav"
-brew "libgit2"
-brew "libiconv"
-brew "libressl"
-brew "librsvg"
-brew "libxslt"
-brew "llvm"
-brew "lua"
-brew "luarocks"
-brew "make"
-brew "man-db"
-brew "mariadb-connector-c"
-brew "mas"
-brew "neofetch"
-brew "neovim"
-brew "nmap"
-brew "node"
-brew "openssh"
-brew "pandoc"
-brew "pandoc-citeproc"
-brew "pandoc-crossref"
-brew "parallel"
-brew "pass"
-brew "php"
-brew "pkg-config"
-brew "podofo"
-brew "protobuf"
-brew "rename"
-brew "rsync"
-brew "ruby"
-brew "screen"
-brew "shellcheck"
-brew "shellharden"
-brew "shunit2"
-brew "sox"
-brew "sshfs"
-brew "subversion"
-brew "taglib"
-brew "tcl-tk"
-brew "tcsh"
-brew "texinfo"
-brew "the_silver_searcher"
-brew "tmux"
-brew "trash"
-brew "udunits"
-brew "v8"
-brew "vim"
-brew "wget"
-brew "youtube-dl"
-brew "zlib"
-brew "zsh"
-brew "mongodb/brew/mongodb-community"
-brew "vitorgalvao/tiny-scripts/cask-repair"
+cask "xquartz"
+
+# Alphabetical {{{1
+# ------------------------------------------------------------------------------
+
 cask "1password"
 cask "adobe-acrobat-reader"
-cask "adoptopenjdk"
+cask "adoptopenjdk"  # igv
+cask "aerial"
 cask "alacritty"
 cask "alfred"
 cask "aspera-connect"
@@ -134,6 +66,7 @@ cask "calibre"
 cask "carbon-copy-cloner"
 cask "coconutbattery"
 cask "coda"
+cask "colloquy"
 cask "darktable"
 cask "deluge"
 cask "docker"
@@ -142,9 +75,10 @@ cask "firefox"
 cask "github"
 cask "google-chrome"
 cask "google-chrome-canary"
-cask "google-cloud-sdk"
-cask "google-drive-file-stream"
+cask "google-cloud-sdk"  # latest
+cask "google-drive-file-stream"  # latest
 cask "gpg-suite"
+cask "handbrake"
 cask "hazel"
 cask "igv"
 cask "iterm2"
@@ -182,16 +116,156 @@ cask "virtualbox"
 cask "visual-studio-code"
 cask "vlc"
 cask "xld"
-cask "xquartz"
-cask "zoom"
 cask "zoomus"
+
+# Brews {{{1
+# ==============================================================================
+
+# Rust: Use cargo to manage packages instead: broot, exa, fd, ripgrep, xsv.
+
+# Shells {{{2
+# ------------------------------------------------------------------------------
+
+brew "bash"
+brew "dash"
+brew "fish"
+brew "ksh"
+brew "tcsh"
+brew "zsh"
+
+# Priority {{{2
+# ------------------------------------------------------------------------------
+
+brew "python@3.8"
+
+brew "libssh2"
+brew "libtool"
+brew "libxml2"
+
+brew "gcc"
+brew "open-mpi"
+brew "openblas"
+brew "hdf5"
+brew "sqlite"
+brew "tcl-tk"
+brew "tesseract"
+
+brew "proj"
+brew "gdal"
+
+# Alphabetical {{{2
+# ------------------------------------------------------------------------------
+
+brew "ack"
+brew "autoconf"
+brew "autojump"
+brew "automake"
+brew "awscli"
+brew "azure-cli"
+brew "bash-completion"
+brew "bfg"
+brew "binutils"
+brew "ccache"
+brew "checkbashisms"
+brew "circleci"
+brew "cmake"
+brew "convmv"
+brew "coreutils"
+brew "curl"
+brew "exiftool"
+brew "ffmpeg"
+brew "findutils"
+brew "flac"
+brew "fzf"
+brew "gawk"
+brew "git"
+brew "git-lfs"
+brew "gnu-sed"
+brew "gnu-tar"
+brew "gnu-time"
+brew "gnu-units"
+brew "gnu-which"
+brew "go"
+brew "gpatch"
+brew "grep"
+brew "groff"
+brew "gsl"
+brew "htop"
+brew "httpd"
+brew "hub"
+brew "igraph"
+brew "imagemagick"
+brew "jq"
+brew "lame"
+brew "lapack"
+brew "leiningen"
+brew "lesspipe"
+brew "libav"
+brew "libgit2"
+brew "libiconv"
+brew "libomp"
+brew "libressl"
+brew "librsvg"
+brew "libxslt"
+brew "llvm"
+brew "lua"
+brew "luarocks"
+brew "make"
+brew "man-db"
+brew "mariadb-connector-c"
+brew "mas"
+brew "mkvtoolnix"
+brew "mp4v2"
+brew "neofetch"
+brew "neovim"
+brew "nmap"
+brew "node"
+brew "openssh"
+brew "pandoc"
+brew "pandoc-citeproc"
+brew "pandoc-crossref"
+brew "parallel"
+brew "pass"
+brew "php"
+brew "pkg-config"
+brew "podofo"
+brew "protobuf"
+brew "rename"
+brew "rsync"
+brew "ruby"
+brew "screen"
+brew "shellcheck"
+brew "shellharden"
+brew "shunit2"
+brew "sox"
+brew "sshfs"
+brew "subversion"
+brew "taglib"
+brew "texinfo"
+brew "the_silver_searcher"
+brew "tmux"
+brew "trash"
+brew "udunits"
+brew "v8"
+brew "vim"
+brew "wget"
+brew "youtube-dl"
+brew "zlib"
+
+# External brews {{{2
+# ------------------------------------------------------------------------------
+
+brew "mongodb/brew/mongodb-community"
+brew "vitorgalvao/tiny-scripts/cask-repair"
+
+# Mac App Store {{{1
+# ==============================================================================
+
 mas "Calca", id: 635758264
 mas "Disk Speed Test", id: 425264550
 mas "EasyFind", id: 411673888
 mas "Gapplin", id: 768053424
 mas "GarageBand", id: 682658836
-mas "iA Writer", id: 775737590
-mas "iMovie", id: 408981434
 mas "Instapaper", id: 1481302432
 mas "Internet Access Policy Viewer", id: 1482630322
 mas "Keynote", id: 409183694
@@ -204,3 +278,5 @@ mas "Soulver", id: 413965349
 mas "Table Tool", id: 1122008420
 mas "The Unarchiver", id: 425424353
 mas "Tweetbot", id: 1384080005
+mas "iA Writer", id: 775737590
+mas "iMovie", id: 408981434
