--- a/app/alacritty/alacritty.yml
+++ b/app/alacritty/alacritty.yml
@@ -1,5 +1,5 @@
-# Configuration for Alacritty, the GPU enhanced terminal emulator.
-# Updated 2019-09-13.
+# Alacritty configuration.
+# Updated 2020-07-24.
 
 window:
   dimensions:
@@ -9,37 +9,37 @@ window:
 font:
   size: 16.0
   normal:
-    family: "SF Mono"
+    family: "JetBrains Mono"
     style: Regular
   bold:
-    family: "SF Mono"
+    family: "JetBrains Mono"
     style: Bold
   italic:
-    family: "SF Mono"
+    family: "JetBrains Mono"
     style: Italic
   use_thin_strokes: false
 
 colors:
   primary:
-    background: '0x282a36'
     foreground: '0xf8f8f2'
+    background: '0x22212c'
   normal:
-    black:   '0x000000'
-    red:     '0xff5555'
-    green:   '0x50fa7b'
-    yellow:  '0xf1fa8c'
-    blue:    '0xcaa9fa'
-    magenta: '0xff79c6'
-    cyan:    '0x8be9fd'
-    white:   '0xbfbfbf'
+    black:   '0x454158'
+    red:     '0xff9580'
+    green:   '0x8aff80'
+    yellow:  '0xffff80'
+    blue:    '0x9580ff'
+    magenta: '0xff80bf'
+    cyan:    '0x80ffea'
+    white:   '0xf8f8f2'
   bright:
-    black:   '0x575b70'
-    red:     '0xff6e67'
-    green:   '0x5af78e'
-    yellow:  '0xf4f99d'
-    blue:    '0xcaa9fa'
-    magenta: '0xff92d0'
-    cyan:    '0x9aedfe'
-    white:   '0xe6e6e6'
+    black:   '0x504c67'
+    red:     '0xffaa99'
+    green:   '0xa2ff99'
+    yellow:  '0xffff99'
+    blue:    '0xaa99ff'
+    magenta: '0xff99cc'
+    cyan:    '0x99ffee'
+    white:   '0xffffff'
 
 draw_bold_text_with_bright_colors: true
