--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 # """
 # Git submodules.
-# Updated 2020-06-21.
+# Updated 2020-07-31.
 #
 # Potentially useful:
 # - jedi-vim
@@ -13,32 +13,32 @@
 
 [submodule "app/tmux/tmux.d/plugins/tpm"]
 	path = app/tmux/tmux.d/plugins/tpm
-	url = https://github.com/tmux-plugins/tpm
+	url = https://github.com/tmux-plugins/tpm.git
 	branch = master
 	ignore = dirty
 [submodule "app/vim/vim.d/pack/dist/start/Nvim-R"]
 	path = app/vim/vim.d/pack/dist/start/Nvim-R
-	url = https://github.com/jalvesaq/Nvim-R
+	url = https://github.com/jalvesaq/Nvim-R.git
 	branch = master
 	ignore = dirty
 [submodule "app/vim/vim.d/pack/dist/start/nerdtree"]
 	path = app/vim/vim.d/pack/dist/start/nerdtree
-	url = https://github.com/scrooloose/nerdtree
+	url = https://github.com/scrooloose/nerdtree.git
 	branch = master
 	ignore = dirty
 [submodule "app/vim/vim.d/pack/dist/start/syntastic"]
 	path = app/vim/vim.d/pack/dist/start/syntastic
-	url = https://github.com/vim-syntastic/syntastic
+	url = https://github.com/vim-syntastic/syntastic.git
 	branch = master
 	ignore = dirty
 [submodule "app/vim/vim.d/pack/dist/start/vim-airline"]
 	path = app/vim/vim.d/pack/dist/start/vim-airline
-	url = https://github.com/vim-airline/vim-airline
+	url = https://github.com/vim-airline/vim-airline.git
 	branch = master
 	ignore = dirty
 [submodule "app/vim/vim.d/pack/dist/start/vim-fugitive"]
 	path = app/vim/vim.d/pack/dist/start/vim-fugitive
-	url = https://github.com/tpope/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
 	branch = master
 	ignore = dirty
 [submodule "app/vim/vim.d/pack/dist/start/vim-grepper"]
@@ -48,7 +48,7 @@
 	ignore = dirty
 [submodule "app/vim/vim.d/pack/dist/start/vim-markdown"]
 	path = app/vim/vim.d/pack/dist/start/vim-markdown
-	url = https://github.com/plasticboy/vim-markdown
+	url = https://github.com/plasticboy/vim-markdown.git
 	branch = master
 	ignore = dirty
 [submodule "app/vim/vim.d/pack/dist/start/vim-signify"]
@@ -63,22 +63,22 @@
 	ignore = dirty
 [submodule "shell/zsh/plugins/zsh-autosuggestions"]
 	path = shell/zsh/plugins/zsh-autosuggestions
-	url = https://github.com/zsh-users/zsh-autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions.git
 	branch = master
 	ignore = dirty
 [submodule "theme/dracula/bbedit"]
 	path = theme/dracula/bbedit
-	url = https://github.com/dracula/bbedit
+	url = https://github.com/dracula/bbedit.git
 	branch = master
 	ignore = dirty
 [submodule "theme/dracula/emacs"]
 	path = theme/dracula/emacs
-	url = https://github.com/dracula/emacs
+	url = https://github.com/dracula/emacs.git
 	branch = master
 	ignore = dirty
 [submodule "theme/dracula/firefox"]
 	path = theme/dracula/firefox
-	url = https://github.com/dracula/firefox
+	url = https://github.com/dracula/firefox.git
 	branch = master
 	ignore = dirty
 [submodule "theme/dracula/fish"]
@@ -87,46 +87,46 @@
 	branch = master
 [submodule "theme/dracula/google-chrome"]
 	path = theme/dracula/google-chrome
-	url = https://github.com/dracula/google-chrome
+	url = https://github.com/dracula/google-chrome.git
 	branch = master
 	ignore = dirty
 [submodule "theme/dracula/jupyterlab"]
 	path = theme/dracula/jupyterlab
-	url = https://github.com/dracula/jupyterlab
+	url = https://github.com/dracula/jupyterlab.git
 	branch = master
 	ignore = dirty
 [submodule "theme/dracula/powershell"]
 	path = theme/dracula/powershell
-	url = https://github.com/dracula/powershell
+	url = https://github.com/dracula/powershell.git
 	branch = master
 	ignore = dirty
 [submodule "theme/dracula/putty"]
 	path = theme/dracula/putty
-	url = https://github.com/gkroon/dracula-putty
+	url = https://github.com/gkroon/dracula-putty.git
 	branch = master
 	ignore = dirty
 [submodule "theme/dracula/terminal-app"]
 	path = theme/dracula/terminal-app
-	url = https://github.com/dracula/terminal-app
+	url = https://github.com/dracula/terminal-app.git
 	branch = master
 	ignore = dirty
 [submodule "theme/dracula/vim"]
 	path = theme/dracula/vim
-	url = https://github.com/dracula/vim
+	url = https://github.com/dracula/vim.git
 	branch = master
 	ignore = dirty
 [submodule "theme/dracula/visual-studio-code"]
 	path = theme/dracula/visual-studio-code
-	url = https://github.com/dracula/visual-studio-code
+	url = https://github.com/dracula/visual-studio-code.git
 	branch = master
 	ignore = dirty
 [submodule "theme/dracula/xcode"]
 	path = theme/dracula/xcode
-	url = https://github.com/dracula/xcode
+	url = https://github.com/dracula/xcode.git
 	branch = master
 	ignore = dirty
 [submodule "theme/dracula/windows-terminal"]
 	path = theme/dracula/windows-terminal
-	url = https://github.com/dracula/windows-terminal
+	url = https://github.com/dracula/windows-terminal.git
 	branch = master
 	ignore = dirty
