Add comment regarding Python

--- a/os/darwin/app/homebrew/Brewfile
+++ b/os/darwin/app/homebrew/Brewfile
@@ -218,6 +218,8 @@ brew "pkg-config"
 brew "podofo"
 brew "proj"
 brew "protobuf"
+# Python: Use official Framework binary install instead of Homebrew.
+# Use 'install-python-framework' from koopa to install.
 brew "python@3.8", link: false
 brew "python@3.9", link: false
 brew "rename"
