--- a/os/darwin/app/homebrew/Brewfile
+++ b/os/darwin/app/homebrew/Brewfile
@@ -1,6 +1,6 @@
 # """
 # Homebrew Bundle Brewfile.
-# Updated 2020-10-06.
+# Updated 2020-10-12.
 #
 # LLVM:
 # LLVM takes up 4 GB of disk space but is required for some Python packages.
@@ -199,6 +199,7 @@ brew "mariadb-connector-c"
 brew "mas"
 brew "mkvtoolnix"
 brew "mp4v2"
+brew "ncmpcpp"
 brew "neofetch"
 brew "neovim"
 brew "nmap"
