--- a/os/darwin/app/homebrew/Brewfile
+++ b/os/darwin/app/homebrew/Brewfile
@@ -199,6 +199,8 @@ brew "mariadb-connector-c"
 brew "mas"
 brew "mkvtoolnix"
 brew "mp4v2"
+brew "mpc"
+brew "mpd"
 brew "ncmpcpp"
 brew "neofetch"
 brew "neovim"
