--- a/os/darwin/app/homebrew/Brewfile
+++ b/os/darwin/app/homebrew/Brewfile
@@ -1,6 +1,6 @@
 # """
 # Homebrew Bundle Brewfile.
-# Updated 2020-11-01.
+# Updated 2020-11-10.
 #
 # LLVM:
 # LLVM takes up 4 GB of disk space but is required for some Python packages.
@@ -154,6 +154,7 @@ brew "convmv"
 brew "coreutils"
 brew "curl"
 brew "dash"
+brew "dog"  # rust
 brew "exiftool"
 brew "ffmpeg"
 brew "findutils"
